# q3e

./: .gitignore  CMakeLists.txt  Makefile  README.md  __git_patch.sh  __git_patch_apply.sh  __git_pull_origin_master.sh  make_ASM.sh  make_all.sh  make_clean.sh  make_rebuild.sh  make_wipe.sh
code/botlib/: be_aas_bspq3.d  be_aas_cluster.d  be_aas_debug.d  be_aas_entity.d  be_aas_file.d  be_aas_main.d  be_aas_move.d  be_aas_optimize.d  be_aas_reach.d  be_aas_route.d  be_aas_routealt.d  be_aas_sample.d  be_ai_char.d  be_ai_chat.d  be_ai_gen.d  be_ai_goal.d  be_ai_move.d  be_ai_weap.d  be_ai_weight.d  be_ea.d  be_interface.d  l_crc.d  l_libvar.d  l_log.d  l_memory.d  l_precomp.d  l_script.d  l_struct.d
code/client/: cl_avi.d  cl_cgame.d  cl_cin.d  cl_console.c  cl_console.d  cl_curl.cz  cl_curl.h  cl_input.d  cl_jpeg.c  cl_jpeg.d  cl_keys.c  cl_keys.d  cl_main.c  cl_main.d  cl_net_chan.d  cl_parse.c  cl_parse.d  cl_scrn.d  cl_ui.d  client.h  snd_adpcm.d  snd_codec.d  snd_codec_wav.d  snd_dma.c  snd_dma.d  snd_main.d  snd_mem.d  snd_mix.d  snd_wavelet.d
code/client/app_curl/: cl_curl.c  cl_curl.d
code/qcommon/: common.c  q_shared.h
code/qcommon/renderer/: puff.c  q_math.c  q_shared.c
code/qcommon/vm/aarch64/: vm_aarch64.c
code/qcommon/vm/arm/: vm_armv7l.c
code/qcommon/vm/x86/: vm_x86.c  vm_x86.d
code/renderer/: puff.d  q_math.d  q_shared.d  tr_init.c
code/renderer2/: puff.d  q_math.d  q_shared.d  tr_init.c
code/renderercommon/: tr_public.h
code/renderervk/: tr_backend.c  tr_bsp.c  tr_cmds.c  tr_common.h  tr_image.c  tr_init.c  tr_local.h  tr_main.c  tr_model.c  tr_scene.c  tr_shade.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_surface.c
code/sdl/: sdl_gamma.c  sdl_gamma.d  sdl_glimp.c  sdl_glimp.d  sdl_glw.h  sdl_input.c  sdl_input.d  sdl_snd.c  sdl_snd.d
code/unix/: linux_glimp.c
code/unix/joy/: linux_joystick.c
code/unix/sdl/off/: linux_glimp.c  linux_qgl.c  linux_snd.c  x11_dga.c  x11_randr.c  x11_vidmode.c
code/unix/vk/on/: linux_qvk.c
code/win32/: win_glimp.c  win_qvk.c
code/win32/msvc2005/: quake3e.vcproj
code/win32/msvc2017/: quake3e.vcxproj  quake3e.vcxproj.filters
